--- a/_config.yml
+++ b/_config.yml
@@ -335,6 +335,8 @@ external_links:
   target: _blank
   exclude:
 
+
+enable_video_embedding: false
 # -----------------------------------------------------------------------------
 # Responsive WebP Images
 # -----------------------------------------------------------------------------
