--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ footer_text: >
   # Photos from <a href="https://unsplash.com" target="_blank">Unsplash</a>.
 keywords: jekyll, jekyll-theme, academic-website, portfolio-website # add your own keywords or leave empty
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
-icon: :star: # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
+icon: ":star:" # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
 
 url: https://xuchuangw.github.io # the base hostname & protocol for your site
 baseurl: # the subpath of your site, e.g. /blog/. Leave blank for root
@@ -334,7 +334,6 @@ external_links:
   rel: external nofollow noopener
   target: _blank
   exclude:
-
 
 enable_video_embedding: false
 # -----------------------------------------------------------------------------
